use Collectors.toList()
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>